--- a/sky/requirements.txt
+++ b/sky/requirements.txt
@@ -1,12 +1,20 @@
+appdirs==1.4.2
 defusedxml==0.4.1
+dj-database-url==0.4.2
 Django==1.10.5
 django-allauth==0.30.0
 django-registration==2.2
 glob2==0.5
+gunicorn==19.6.0
 oauthlib==2.0.1
 olefile==0.44
+packaging==16.8
 Pillow==4.0.0
+psycopg2==2.6.2
+pyparsing==2.1.10
 python3-openid==3.0.10
 requests==2.13.0
 requests-oauthlib==0.7.0
+six==1.10.0
 virtualenv==15.1.0
+whitenoise==3.3.0
