--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 appdirs==1.4.2
+brotlipy==0.6.0
+cffi==1.9.1
+Collectfast==0.2.3
 defusedxml==0.4.1
 dj-database-url==0.4.2
 Django==1.10.5
 django-allauth==0.30.0
+django-redis-cache==1.6.5
 django-registration==2.2
+django-storages-redux==1.3
 glob2==0.5
 gunicorn==19.6.0
 oauthlib==2.0.1
@@ -11,8 +16,12 @@ olefile==0.44
 packaging==16.8
 Pillow==4.0.0
 psycopg2==2.6.2
+pycparser==2.17
 pyparsing==2.1.10
+python-dateutil==2.6.0
 python3-openid==3.0.10
+pytz==2016.10
+redis==2.10.5
 requests==2.13.0
 requests-oauthlib==0.7.0
 six==1.10.0
