--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.2
+beautifulsoup4==4.5.3
 boto==2.46.1
 brotlipy==0.6.0
 cffi==1.9.1
@@ -7,11 +8,15 @@ defusedxml==0.4.1
 dj-database-url==0.4.2
 Django==1.10.5
 django-allauth==0.30.0
+django-cleanup==0.4.2
+django-crispy-forms==1.6.1
 django-redis-cache==1.6.5
 django-registration==2.2
+django-smartfields==1.0.9
 django-storages-redux==1.3
 glob2==0.5
 gunicorn==19.6.0
+lxml==3.7.3
 oauthlib==2.0.1
 olefile==0.44
 packaging==16.8
@@ -27,4 +32,5 @@ requests==2.13.0
 requests-oauthlib==0.7.0
 six==1.10.0
 virtualenv==15.1.0
+Wand==0.4.4
 whitenoise==3.3.0
