--- a/requirements.txt
+++ b/requirements.txt
@@ -25,11 +25,13 @@ psycopg2==2.6.2
 pycparser==2.17
 pyparsing==2.1.10
 python-dateutil==2.6.0
+python-http-client==2.2.1
 python3-openid==3.0.10
 pytz==2016.10
 redis==2.10.5
 requests==2.13.0
 requests-oauthlib==0.7.0
+sendgrid==3.6.3
 six==1.10.0
 virtualenv==15.1.0
 Wand==0.4.4
